--- a/DAA_L2.ipynb
+++ b/DAA_L2.ipynb
@@ -121,6 +121,144 @@
     "\n",
     "print_sorted_lists(sorted_lists)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 3 largest elements are: [8, 7, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "def find_k_largest_elements(arr, k):\n",
+    "    # Create a min-heap of size K to store the K largest elements\n",
+    "    min_heap = []\n",
+    "\n",
+    "    # Iterate through the array\n",
+    "    for num in arr:\n",
+    "        # If the heap size is less than K, add the element to the heap\n",
+    "        if len(min_heap) < k:\n",
+    "            heapq.heappush(min_heap, num)\n",
+    "        else:\n",
+    "            # If the current element is greater than the smallest element in the heap,\n",
+    "            # replace the smallest element with the current element\n",
+    "            if num > min_heap[0]:\n",
+    "                heapq.heappop(min_heap)\n",
+    "                heapq.heappush(min_heap, num)\n",
+    "\n",
+    "    # The min-heap now contains the K largest elements\n",
+    "    return sorted(min_heap, reverse=True)\n",
+    "\n",
+    "# Example usage:\n",
+    "arr = [3, 1, 5, 7, 4, 2, 6, 8]\n",
+    "k = 3\n",
+    "\n",
+    "result = find_k_largest_elements(arr, k)\n",
+    "print(f\"The {k} largest elements are: {result}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum number of activities: 3\n",
+      "Selected Activities:\n",
+      "(1, 4)\n",
+      "(5, 7)\n",
+      "(8, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_activities(activities):\n",
+    "    # Sort the activities by their finishing times\n",
+    "    activities.sort(key=lambda x: x[1])\n",
+    "    \n",
+    "    # The first activity is always selected\n",
+    "    selected_activities = [activities[0]]\n",
+    "    \n",
+    "    # Initialize the index of the most recent selected activity\n",
+    "    last_selected_index = 0\n",
+    "    \n",
+    "    # Iterate through the sorted activities\n",
+    "    for i in range(1, len(activities)):\n",
+    "        # If the start time of the current activity is greater than or equal to\n",
+    "        # the finishing time of the last selected activity, select it\n",
+    "        if activities[i][0] >= activities[last_selected_index][1]:\n",
+    "            selected_activities.append(activities[i])\n",
+    "            last_selected_index = i\n",
+    "    \n",
+    "    return selected_activities\n",
+    "\n",
+    "# Example usage:\n",
+    "activities = [(1, 4), (3, 5), (0, 6), (5, 7), (3, 9), (5, 9), (6, 10), (8, 11), (8, 12), (2, 14)]\n",
+    "result = max_activities(activities)\n",
+    "\n",
+    "print(f\"Maximum number of activities: {len(result)}\")\n",
+    "print(\"Selected Activities:\")\n",
+    "for activity in result:\n",
+    "    print(activity)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non-overlapping intervals after merging:\n",
+      "(1, 6)\n",
+      "(8, 10)\n",
+      "(15, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge_intervals(intervals):\n",
+    "    if not intervals:\n",
+    "        return []\n",
+    "\n",
+    "    # Sort the intervals by their start times\n",
+    "    intervals.sort(key=lambda x: x[0])\n",
+    "\n",
+    "    merged_intervals = [intervals[0]]\n",
+    "\n",
+    "    for interval in intervals[1:]:\n",
+    "        current_interval = merged_intervals[-1]\n",
+    "\n",
+    "        if interval[0] <= current_interval[1]:\n",
+    "            # There is an overlap, so merge the intervals\n",
+    "            merged_intervals[-1] = (current_interval[0], max(current_interval[1], interval[1]))\n",
+    "        else:\n",
+    "            # No overlap, add the current interval to the merged list\n",
+    "            merged_intervals.append(interval)\n",
+    "\n",
+    "    return merged_intervals\n",
+    "\n",
+    "# Example usage:\n",
+    "intervals = [(1, 3), (2, 6), (8, 10), (15, 18)]\n",
+    "merged = merge_intervals(intervals)\n",
+    "\n",
+    "print(\"Non-overlapping intervals after merging:\")\n",
+    "for interval in merged:\n",
+    "    print(interval)\n"
+   ]
   }
  ],
  "metadata": {
