--- a/sortingT.ipynb
+++ b/sortingT.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "\n",
-    "# Bubble Sort\n",
+    "# best, average, worst\n",
+    "# Bubble Sort n, n^2, n^2\n",
     "def bubble_sort(arr):\n",
     "    n = len(arr)\n",
     "    for i in range(n):\n",
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selection Sort\n",
+    "# Selection Sort n^2, n^2, n^2\n",
     "def selection_sort(arr):\n",
     "    n = len(arr)\n",
     "    for i in range(n):\n",
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insertion Sort\n",
+    "# Insertion Sort n, n^2, n^2\n",
     "def insertion_sort(arr):\n",
     "    for i in range(1, len(arr)):\n",
     "        key = arr[i]\n",
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Heap Sort\n",
+    "# Heap Sort nlogn, nlogn, nlogn\n",
     "def heap_sort(arr):\n",
     "    def heapify(arr, n, i):\n",
     "        largest = i\n",
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Quick Sort\n",
+    "# Quick Sort nlogn, nlogn, n^2\n",
     "def quick_sort(arr):\n",
     "    if len(arr) <= 1:\n",
     "        return arr\n",
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merge Sort\n",
+    "# Merge Sort nlogn, nlogn, nlogn\n",
     "def merge_sort(arr):\n",
     "    if len(arr) <= 1:\n",
     "        return arr\n",
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bucket Sort\n",
+    "# Bucket Sort n+k, n+k, n^2\n",
     "def bucket_sort(arr):\n",
     "    max_val = max(arr)\n",
     "    min_val = min(arr)\n",
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Radix Sort\n",
+    "# Radix Sort nk, nk, nk\n",
     "def radix_sort(arr):\n",
     "    def counting_sort(arr, exp):\n",
     "        n = len(arr)\n",
