--- a/CSE21018_FODS_LE3.ipynb
+++ b/CSE21018_FODS_LE3.ipynb
@@ -400,9 +400,10 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, median_absolute_error, explained_variance_score, max_error, mean_squared_log_error\n",
     "import numpy as np\n",
-    "\n",
-    "X = datafat.drop('BodyFat', axis=1)\n",
-    "y = datafat['BodyFat']\n",
+    "import pandas as pd\n",
+    "data = pd.read_csv('train_extended.csv')\n",
+    "X = data.drop('Age', axis=1)\n",
+    "y = data['Age']\n",
     "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
