--- a/CSE21018_FODS_LE3.ipynb
+++ b/CSE21018_FODS_LE3.ipynb
@@ -435,6 +435,106 @@
     "print(f'Maximum Error: {max_err:.2f}')\n",
     "print(f'Mean Squared Log Error (MSLE): {msle:.5f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                Mean Squared Error  R-squared  \\\n",
+      "Linear Regression                             0.10       0.90   \n",
+      "Ridge Regression                              0.15       0.85   \n",
+      "Lasso Regression                              0.20       0.80   \n",
+      "Decision Tree Regression                      0.25       0.75   \n",
+      "Random Forest Regression                      0.18       0.82   \n",
+      "Gradient Boosting Regression                  0.12       0.88   \n",
+      "Support Vector Regression                     0.22       0.78   \n",
+      "K-Nearest Neighbors Regression                0.19       0.81   \n",
+      "Elastic Net Regression                        0.21       0.79   \n",
+      "\n",
+      "                                Mean Absolute Error  Explained Variance  \\\n",
+      "Linear Regression                              0.05                0.92   \n",
+      "Ridge Regression                               0.08                0.88   \n",
+      "Lasso Regression                               0.10                0.85   \n",
+      "Decision Tree Regression                       0.12                0.78   \n",
+      "Random Forest Regression                       0.09                0.86   \n",
+      "Gradient Boosting Regression                   0.07                0.90   \n",
+      "Support Vector Regression                      0.11                0.82   \n",
+      "K-Nearest Neighbors Regression                 0.10                0.84   \n",
+      "Elastic Net Regression                         0.09                0.81   \n",
+      "\n",
+      "                                Mean Absolute Percentage Error  \\\n",
+      "Linear Regression                                          5.0   \n",
+      "Ridge Regression                                           7.5   \n",
+      "Lasso Regression                                           8.2   \n",
+      "Decision Tree Regression                                   9.0   \n",
+      "Random Forest Regression                                   6.8   \n",
+      "Gradient Boosting Regression                               5.5   \n",
+      "Support Vector Regression                                  7.9   \n",
+      "K-Nearest Neighbors Regression                             8.1   \n",
+      "Elastic Net Regression                                     7.7   \n",
+      "\n",
+      "                                Root Mean Squared Log Error  \\\n",
+      "Linear Regression                                      0.07   \n",
+      "Ridge Regression                                       0.10   \n",
+      "Lasso Regression                                       0.12   \n",
+      "Decision Tree Regression                               0.15   \n",
+      "Random Forest Regression                               0.11   \n",
+      "Gradient Boosting Regression                           0.09   \n",
+      "Support Vector Regression                              0.13   \n",
+      "K-Nearest Neighbors Regression                         0.12   \n",
+      "Elastic Net Regression                                 0.14   \n",
+      "\n",
+      "                                Median Absolute Error  \\\n",
+      "Linear Regression                                0.04   \n",
+      "Ridge Regression                                 0.06   \n",
+      "Lasso Regression                                 0.08   \n",
+      "Decision Tree Regression                         0.10   \n",
+      "Random Forest Regression                         0.07   \n",
+      "Gradient Boosting Regression                     0.05   \n",
+      "Support Vector Regression                        0.09   \n",
+      "K-Nearest Neighbors Regression                   0.08   \n",
+      "Elastic Net Regression                           0.07   \n",
+      "\n",
+      "                                Median Absolute Percentage Error  Max Error  \n",
+      "Linear Regression                                            4.0       0.20  \n",
+      "Ridge Regression                                             5.8       0.18  \n",
+      "Lasso Regression                                             7.2       0.22  \n",
+      "Decision Tree Regression                                     8.5       0.25  \n",
+      "Random Forest Regression                                     6.1       0.21  \n",
+      "Gradient Boosting Regression                                 4.8       0.19  \n",
+      "Support Vector Regression                                    7.0       0.24  \n",
+      "K-Nearest Neighbors Regression                               7.3       0.23  \n",
+      "Elastic Net Regression                                       6.9       0.26  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Replace these placeholder values with actual metric values\n",
+    "data = {\n",
+    "    'Mean Squared Error': [0.1, 0.15, 0.2, 0.25, 0.18, 0.12, 0.22, 0.19, 0.21],\n",
+    "    'R-squared': [0.9, 0.85, 0.8, 0.75, 0.82, 0.88, 0.78, 0.81, 0.79],\n",
+    "    'Mean Absolute Error': [0.05, 0.08, 0.1, 0.12, 0.09, 0.07, 0.11, 0.1, 0.09],\n",
+    "    'Explained Variance': [0.92, 0.88, 0.85, 0.78, 0.86, 0.9, 0.82, 0.84, 0.81],\n",
+    "    'Mean Absolute Percentage Error': [5.0, 7.5, 8.2, 9.0, 6.8, 5.5, 7.9, 8.1, 7.7],\n",
+    "    'Root Mean Squared Log Error': [0.07, 0.1, 0.12, 0.15, 0.11, 0.09, 0.13, 0.12, 0.14],\n",
+    "    'Median Absolute Error': [0.04, 0.06, 0.08, 0.1, 0.07, 0.05, 0.09, 0.08, 0.07],\n",
+    "    'Median Absolute Percentage Error': [4.0, 5.8, 7.2, 8.5, 6.1, 4.8, 7.0, 7.3, 6.9],\n",
+    "    'Max Error': [0.2, 0.18, 0.22, 0.25, 0.21, 0.19, 0.24, 0.23, 0.26]\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "metrics_df = pd.DataFrame(data, index=['Linear Regression', 'Ridge Regression', 'Lasso Regression', 'Decision Tree Regression', 'Random Forest Regression', 'Gradient Boosting Regression', 'Support Vector Regression', 'K-Nearest Neighbors Regression', 'Elastic Net Regression'])\n",
+    "\n",
+    "# Print the DataFrame\n",
+    "print(metrics_df)\n"
+   ]
   }
  ],
  "metadata": {
